@@ -1,5 +1,7 @@
 Changelog for DimensionDoor (v2.1.1-SNAPSHOT)
 
+2012-08-01 01:00:36 +0100    clean up (James Richardson)
+2012-08-01 00:56:26 +0100    enable using modify command from console (James Richardson)
 2012-08-01 00:55:40 +0100    all commands updated (James Richardson)
 2012-08-01 00:16:07 +0100    finished info command (James Richardson)
 2012-07-31 23:42:48 +0100    implemented info command (James Richardson)
